specs/014-string-methods/examples/invalid/repeat-arg-count.ts
const s: string = "ab";
// repeat takes exactly one argument.
console.log(s.repeat(2, 3));
